--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-rules",
-  "version": "0.0.1",
+  "name": "element",
+  "version": "0.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -10,36 +10,45 @@
     "Ethan Brooks <ethan.brooks@gmail.com>"
   ],
   "scripts": {
+    "http-server": "http-server -p 4200 -a 0.0.0.0 target/",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "lint": "ng lint ng-rules",
-    "build:client-and-server-bundles": "ng build --prod && ng run ng-rules:server:production",
+    "lint": "ng lint",
+    "build:client-and-server-bundles": "ng build --prod && ng run element:server:production",
     "build:prerender": "npm run build:client-and-server-bundles && npm run compile:server && npm run generate:prerender",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "compile:server": "tsc -p server.tsconfig.json",
     "generate:prerender": "cd dist && node prerender",
     "serve:prerender": "cd dist/browser && http-server",
     "serve:ssr": "node dist/server",
-    "start:ce": "ng serve --project element --progress --open --sourceMap=true --optimization=false --aot --vendorChunk=true -o",
+    "start:ce": "ng serve --host 0.0.0.0 --disableHostCheck --progress --open --sourceMap=true --optimization=false --aot --vendorChunk=true -o",
     "build:ce": "npm run bundle:ce && npm run copy:ce",
     "copy:ce": "cat ./dist/element/{polyfills-es2015,runtime-es2015,main-es2015}.js > ./dist/element/element.js",
-    "bundle:ce": "ng build element  --aot --prod --output-hashing=none"
+    "bundle:ce": "ng build element --aot --prod --output-hashing=none",
+    "e2e:uat": "ng e2e -c uat",
+    "e2e:regression": "ng e2e -c regression",
+    "e2e:smoke": "ng e2e -c smoke",
+    "e2e:e2e": "ng e2e -c e2e",
+    "e2e": "ng e2e --webdriver-update=false",
+    "pree2e": "webdriver-manager update --versions.chrome=73.0.3683.75",
+    "pree2e:regression": "webdriver-manager update --versions.chrome=73.0.3683.75",
+    "pree2e:smoke": "webdriver-manager update --versions.chrome=73.0.3683.75",
+    "pree2e:uat": "webdriver-manager update --versions.chrome=73.0.3683.75"
   },
   "pre-commit": [],
   "private": true,
   "dependencies": {
     "@angular/elements": "^9.1.0",
-    "@angular/animations": "8.2.14",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-
+    "@angular/animations": "~8.2.5",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/core": "~8.2.5",
+    "@angular/forms": "~8.2.5",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/platform-server": "8.2.14",
-    "@angular/router": "8.2.14",
+    "@angular/router": "~8.2.5",
     "@nguniversal/common": "^8.2.6",
     "@nguniversal/express-engine": "^8.2.6",
     "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
@@ -49,30 +58,47 @@
     "express": "^4.17.1",
     "jszip": "3.2.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "6.5.4",
+    "rxjs": "~6.4.0",
     "stream": "^0.0.2",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.9.1",
+    "bootstrap": "4.1.1",
+    "ngx-bootstrap": "^5.1.2",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@webcomponents/custom-elements": "^1.4.1",
-    "terser": "^4.6.10",
-    "@angular-devkit/build-angular": "0.803.23",
+    "@angular-devkit/build-angular": "~0.803.4",
     "@angular-devkit/build-optimizer": "^0.803.23",
-    "@angular/cli": "8.3.23",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
     "@ngtools/webpack": "^8.3.23",
-    "@types/node": "^13.1.7",
-    "codelyzer": "^5.2.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@webcomponents/custom-elements": "^1.4.1",
+    "codelyzer": "^5.0.0",
     "core-js": "^3.6.4",
     "http-server": "^0.12.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-reporters": "^2.3.2",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "postcss-loader": "^3.0.0",
     "pre-commit": "^1.2.2",
+    "protractor": "~5.4.0",
+    "protractor-beautiful-reporter": "^1.3.6",
+    "protractor-pretty-html-reporter": "0.0.16",
     "safe-buffer": "^5.2.0",
+    "terser": "^4.6.10",
     "ts-loader": "^6.2.1",
+    "ts-node": "~7.0.0",
     "tslib": "^1.10.0",
-    "tslint": "^5.20.1",
-    "typescript": ">=3.4.0 and <3.6.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3",
     "webpack": "^4.41.5"
   }
 }
